Update and rename trial.html to index.html

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div id="navbarMenuHeroB" class="navbar-menu">
               <div class="navbar-end">
-                <a href="trial.html" class="navbar-item is-active">
+                <a href="index.html" class="navbar-item is-active">
                   Home
                 </a>
                 <a href="resume.html" class="navbar-item">
