--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
 
     .hero-body {
       font-family:  'PT Sans', sans-serif;
-      background: url(/Users/stevenlee/Desktop/web-projects/test-site/images/nature2.png) no-repeat center center fixed;
+      background: url(images/nature2.png) no-repeat center center fixed;
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
