--- a/resume.html
+++ b/resume.html
@@ -66,13 +66,13 @@
               <div class = "navbar-item is-size-4">
                 <strong>STEVEN LEE</strong>
               </div>
-              <span class="navbar-burger burger" data-target="navbarMenuHeroB">
-                <span></span>
-                <span></span>
-                <span></span>
-              </span>
+              <a role="button" class="navbar-burger" data-target="navMenu" aria-label="menu" aria-expanded="false">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+              </a>
             </div>
-            <div id="navbarMenuHeroB" class="navbar-menu">
+            <div id="navMenu" class="navbar-menu">
               <div class="navbar-end">
                 <a href="index.html" class="navbar-item is-active">
                   Home
